fix(工具): 保留空输入值生命周期事件